# Hematite

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: extensions.rs  main.rs  protocol.rs  workspace.rs
codex-schema/: codex_app_server_protocol.v2.schemas.json
docs/: architecture.md
frontend/: .gitignore  .metadata  pubspec.yaml
frontend/lib/: backend_client.dart  main.dart
frontend/linux/: CMakeLists.txt
frontend/linux/flutter/: CMakeLists.txt
frontend/linux/runner/: CMakeLists.txt  my_application.cc
frontend/test/: widget_test.dart
packaging/: build_release.sh
packaging/linux/: hematite.desktop  hematite.sh  package_deb.sh
packaging/macos/: package_dmg.sh
packaging/windows/: hematite.wxs  package_msi.ps1
scripts/: run_linux.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: CodeEditor.tsx
